initSidebarItems({"struct":[["GrpcInvocation","A gRPC invocation, consisting of exactly two channels: one to read incoming requests from the client (wrapped in a [`Receiver`]), and one to write outgoing responses to the client (wrapped in a [`Sender`])."],["GrpcInvocationSender","A wrapper for sending a [`GrpcInvocation`] over a channel."],["HttpInvocation","An HTTP invocation, consisting of exactly two channels: one to read incoming requests from the client (wrapped in a [`Receiver`]), and one to write outgoing responses to the client (wrapped in a [`Sender`])."],["HttpInvocationSender","A wrapper for sending an [`HttpInvocation`] over a channel."]]});